tests/fixtures/invalid/none_attribute.py
# None does not support attribute access
x = None
y: int = x.foo
